Web Inspector: Timeline Recording across page navigations behaves poorly https://bugs.webkit.org/show_bug.cgi?id=151112

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-11-18
Reviewed by Timothy Hatcher.

* inspector/InspectorPageAgent.cpp:
(WebCore::InspectorPageAgent::frameStartedLoading): Deleted.
Don't reset the execution stopwatch on page navigation.
If a timeline is actively being recorded on the frontend
then all new timestamps suddenly downshifted towards zero
introduces bad data.

Canonical link: https://commits.webkit.org/169555@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192585 268f45cc-cd09-0410-ab3c-d52691b4dbfc